# dstauffman

./: .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .pydocstyle  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  README.rst  README.txt  __init__.py  bpe.py  classes.py  constants.py  dcs  dcs.bat  dcspypy.bat  dcspypy.sh  dcspython.bat  dcspython.sh  enums.py  latex.py  linalg.py  mypy.ini  photos.py  plotting.py  pyproject.toml  quat.py  setup.cfg  setup.py  stats.py  units.py  utils.py
.github/workflows/: ci.yml  replace_nubs_slog_locations.py  run_tests.yml
apps/: __init__.py
apps/bac_gui/: __init__.py  __main__.py  bac_gui.py  run_bac_gui.bat  test_bac_gui.py  test_bac_gui_coverage.bat
archery/: README.txt  __init__.py  bales.py  bracket.css  brackets.py  brackets16.htm  brackets4.htm  constants.py  main.py  simulations.py  utils.py
archery/scoring/: __init__.py  __main__.py  scoring.py  script_plotting.py  test_score_template.xlsx  test_scoring.py
archery/scripts/: script_testing.py
archery/tests/: Test_Case_1.xlsx  Test_Case_3.xlsx  Test_Case_4.xlsx
archery/tournaments/: README.txt  __init__.py  bales.py  brackets.py  brackets32.htm  brackets8.htm  constants.py  main.py  simulations.py  utils.py
archery/tournaments/scripts/: script_testing.py
archery/tournaments/tests/: 2014 USIAC Archers.xlsx  Test_Case_2.xlsx
data/: Kp_ap_nowcast.txt  README.txt  Solar_Cycles.txt  gps-ops_2021_07_28.txt  stars4.txt  tci_info.txt
doc/: Spyder_Installation.txt  instructions.txt  one_line.txt
doc/source/: conf.py  dstauffman.rst  index.rst  modules.rst
doc/tex/: Spyder_Installation.txt  docstring_example.py
doc/tex/DStauffman_Slides/: dstauffman_presentation.tex
doc/tex/Enum Lessons Learned/: Enum Lessons Learned.tex  enum_lessons.py
doc/tex/Sildes_Example/: presentation.tex
doc/tex/Users_Guide/: Users_Guide.tex
docs/Users_Guide/: Users_Guide.tex
docs/source/: index.rst  modules.rst
dstauffman/: __init__.py  __main__.py  analysis.py  binary.py  bpe.py  classes.py  constants.py  enums.py  estimation.py  fortran.py  health.py  kalman.py  latex.py  linalg.py  logs.py  matlab.py  multipass.py  numba.py  optimized.py  parser.py  paths.py  plot_generic.py  plot_health.py  plot_support.py  plotting.py  quat.py  repos.py  stats.py  time.py  units.py  utils.py  utils_log.py  vectors.py  version.py
dstauffman/aerospace/: __init__.py  classes.py  earth.py  gps.py  kalman.py  orbit_const.py  orbit_conv.py  orbit_support.py  orbits.py  plotting.py  quat.py  quat_keras.py  quat_opt.py  smoother.py  vectors.py  weather.py
dstauffman/commands/: __init__.py  help.py  repos.py  runtests.py
dstauffman/docs/Users_Guide/: Users_Guide.tex
dstauffman/docs/source/: conf.py  dstauffman.rst
dstauffman/estimation/: __init__.py  batch.py  kalman.py  linalg.py  smoother.py  support.py
dstauffman/health/: __init__.py  health.py  latex.py  plot_health.py  stats.py
dstauffman/nubs/: __init__.py  numpy_mods.py  optimized.py  passthrough.py
dstauffman/numba/: __init__.py  numpy_mods.py  optimized.py  passthrough.py
dstauffman/plotting/: __init__.py  aerospace.py  batch.py  generic.py  health.py  maps.py  plotting.py  support.py
dstauffman/scripts/: example_bpe_script.py  example_plots.py  example_script.py
dstauffman/spacecraft/: __init__.py  classes.py  kalman.py  plotting.py  quat.py  vectors.py
dstauffman/tests/: .coveragerc  Gender.m  Run_Coverage.bat  Run_Coverage.sh  Run_Full_Coverage.bat  __init__.py  create_matlab_data.m  run_all_docstrings.py  run_all_tests.py  test_aerospace_classes.py  test_aerospace_earth.py  test_aerospace_gps.py  test_aerospace_kalman.py  test_aerospace_orbit_const.py  test_aerospace_orbit_conv.py  test_aerospace_orbit_support.py  test_aerospace_orbits.py  test_aerospace_plotting.py  test_aerospace_quat.py  test_aerospace_quat_keras.py  test_aerospace_quat_opt.py  test_aerospace_smoother.py  test_aerospace_vectors.py  test_aerospace_weather.py  test_analysis.py  test_binary.py  test_bpe.py  test_cell_array.mat  test_classes.py  test_commands_help.py  test_commands_repos.py  test_commands_runtests.py  test_constants.py  test_enums.mat  test_enums.py  test_estimation.py  test_estimation_batch.py  test_estimation_kalman.py  test_estimation_linalg.py  test_estimation_smoother.py  (+51 more)
games/: .coveragerc  __init__.py  brick.py  cards.py  fiver.py  knight.py  knight2.pyx  knight_profile.py  knight_setup.py  pentago.py  rubik.py  test_cards.py  test_fiver.py  test_fiver_coverage.bat  test_knight.py  test_knight_coverage.bat  test_pentago.py  test_tictactoe.py  tictactoe.py
games/pentago/: __init__.py  __main__.py  classes.py  constants.py  gui.py  plotting.py  utils.py
games/pentago/tests/: .coveragerc  __init__.py  (+8 more)
games/tictactoe/: __init__.py  __main__.py  classes.py  constants.py  gui.py  plotting.py  run_tictactoe.py  utils.py
imageproc/: __init__.py  photos.py  test_photos.py
nubs/: __init__.py  numpy_mods.py  optimized.py  passthrough.py
nubs/tests/: test_numpy_mods.py  test_optimized.py  test_passthrough.py
results/: .gitignore
scripts/: example_bar_plots.py  example_bpe_script.py  example_class_custom_dict_saving.py  example_class_custom_hdf5.py  example_directly_save_pngs.py  example_fig_ax.py  example_fig_ax_iter.py  example_histogram_with_CDF.py  example_interpolations.py  example_map_plots.py  example_map_plots_3d.py  example_montecarlo_plots.py  example_plot_phases.py  example_plots.py  example_quaternion_difference_plot.py  example_save_nested_dict.py  example_script.py  np_any_and_all_speed_tests.py  orbit_examples.py  parallel_options.py  plotting_examples.py  script_plot_gnds.py
shell/: dcsipython.bat  dcsipython.sh  dcspypy.bat  dcspypy.sh  dcspython.bat  dcspython.sh  run_dcs_coverage.bat
support/: support.py
tests/: .coveragerc  Run_Coverage.bat  __init__.py  run_all_docstrings.py  run_all_tests.py  test_bpe.py  test_classes.py  test_constants.py  test_enums.py  test_latex.py  test_linalg.py  test_photos.py  test_plotting.py  test_quat.py  test_stats.py  test_units.py  test_utils.py
(+10 files in other folders)
