[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dstauffman"
version = "3.8.0"
description = "Generic python utilities for Aerospace applications"
readme = "README.rst"
dependencies = ["nubs", "slog"]
requires-python = ">=3.10,<4.0"
authors = [
  {name = "David C. Stauffer", email = "dstauffman@yahoo.com"},
]
maintainers = [
  {name = "David C. Stauffer", email = "dstauffman@yahoo.com"},
]
license = { file = "LICENSE" }
keywords = ["numerical", "analysis", "plotting", "quaternions", "estimation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Langauge :: Python :: 3.10",
    "Programming Langauge :: Python :: 3.11",
    "Programming Langauge :: Python :: 3.12",
    "Programming Langauge :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
# Note: static excludes numba/datashader for mypy type checking (as they don't play well together)
numeric = ["h5py>=3.7", "matplotlib>=3.7", "numpy>=2.0", "pandas>=2.0", "pyarrow>=14.0", "PyQt5>=5.15.11", "pyqt5-sip>=12.11", "pyqt5-qt5>=5.15.2", "qtpy>=2.2", "scipy>=1.10", "tblib>=1.7"]
shader = ["dstauffman[numeric]", "datashader>=0.15", "numba>=0.57"]
spyder = ["spyder-kernels>=2.4"]
static = ["dstauffman[numeric]", "black>=25.0", "flake8>=6.0", "isort>=5.10", "mypy>=1.5", "pycodestyle>=2.10", "pylint>=2.16", "PyQt5-stubs>=5.15"]
test = ["pytest>=7.4", "pytest-cov>=4.0"]

[project.urls]
Repository = "https://github.com/DStauffman/dstauffman"
Issues = "https://github.com/DStauffman/dstauffman/issues"
Changelog = "https://github.com/DStauffman/dstauffman/blob/main/CHANGELOG.md"

[project.scripts]
dcs = "dstauffman.__main__:main"

[tool.setuptools.package-data]
dstauffman = ["CHANGELOG.md", "LICENSE.txt", "MANIFEST.in", "pyproject.toml", "README.rst", "*.png", "*.pdf", "*.rst", "*.tex", "*.bat", "*.sh"]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 128
target_version = ["py310", "py311", "py312"]

[tool.coverage.run]
branch = true
omit = ["*/site-packages/*", "*/.eggs/*"]
disable_warnings = ["couldnt-parse"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Create platform independent pragmas (potentially have the test runner modify this)
    "pragma: noc unix",
    #"pragma: noc windows",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "def _main",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",

    # Don't complain about typing overloads
    "@overload"
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage_html_report/coverage.xml"

[tool.isort]
py_version = 312
profile = "black"
line_length = 128
combine_as_imports = true
force_sort_within_sections = true
case_sensitive = true
force_alphabetical_sort_within_sections = true
skip_glob = ["__init__.py", "*/__init__.py"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SLOG", "FIRSTPARTY", "LOCALFOLDER"]
known_slog = ["nubs", "slog"]

[tool.mypy]
show_error_codes       = true
warn_return_any        = true
warn_unused_configs    = true
warn_unreachable       = true
warn_unused_ignores    = true
disallow_untyped_calls = true
disallow_untyped_defs  = true
no_implicit_optional   = true
files                  = [
    "$MYPY_CONFIG_FILE_DIR/dstauffman/**/*.py",
    "$MYPY_CONFIG_FILE_DIR/scripts/*.py"]
mypy_path              = [
    "$MYPY_CONFIG_FILE_DIR/../nubs",
    "$MYPY_CONFIG_FILE_DIR/../slog"]
untyped_calls_exclude  = ["matplotlib"]
#linecount_report       = ".mypy_report"
#any_exprs_report       = ".mypy_report"
#html_report            = ".mypy_report"
#cobertura_xml_report   = ".mypy_report"
#linecoverage_report    = ".mypy_report"
#lineprecision_report   = ".mypy_report"
#xml_report             = ".mypy_report"

[[tool.mypy.overrides]]
module = [
    "coverage.*",
    "datashader.*",
    "h5py.*",
    "keras.*",
    "numba.*",
    "pandas.*",
    "PIL.*",
    "pytest.*",
    "qtpy.*",  # Note would be nice to get rid of this, since PyQt5 is actually stubbed
    "scipy.*",
    "tblib.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 128
disable = ["C0103", "C0301", "C0411", "C0414", "E0401", "E0601", "E0606", "E0611", "E1101", "R0401", "R0402", "R0801", "R0902", "R0903", "R0912", "R0913", "R0914", "R0915", "W0511", "W0702"]
enable = ["I0021"]
ignore-paths = "^(.*[/\\\\]|)tests[/\\\\]test_.*$"

[tool.pydocstyle]
inherit = false
convention = "numpy"
add-ignore = ["D102", "D105", "D204"]

[tool.pyright]
include = ["dstauffman/**/*.py",
    "scripts/*.py"]
extraPaths = ["../nubs",
    "../slog"]
exclude = []
venvPath = "C:\\Users\\DStauffman\\Documents\\venvs"
venv = "everything"
pythonVersion = "3.12"
pythonPlatform = "Windows"  # "All"?
typeCheckingMode = "basic"  # "strict"?
deprecateTypingAliases = true
reportGeneralTypeIssues = false
reportUnboundVariable = false
reportOptionalMemberAccess = true
enableTypeIgnoreComments = true
reportUnnecessaryTypeIgnoreComment = false
